--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,123 +77,180 @@ img {
 }
 
 main span {
-    color: var(--second-color);
-    font-weight: var(--font-semi-bold);
+  color: var(--second-color);
+  font-weight: var(--font-semi-bold);
 }
 
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-    max-width: 1024px;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-  }
-  
-  .grid {
-    display: grid;
-  }
-  
-  .section {
-    padding: 4.5rem 0 2rem;
-  }
-  
-  .section__title {
-    font-size: var(--h2-font-size);
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-  
-  .section__subtitle {
-    display: block;
-    font-size: var(--small-font-size);
-    color: var(--second-color);
-  }
-  
-  .main {
-    overflow: hidden; /* For the animations ScrollReveal*/
-  }
+  max-width: 1024px;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.grid {
+  display: grid;
+}
+
+.section {
+  padding: 5.2rem 0 2rem;
+}
+
+.section__title {
+  font-size: var(--h2-font-size);
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.section__subtitle {
+  display: block;
+  font-size: var(--small-font-size);
+  color: var(--second-color);
+}
+
+.bg-title-color {
+  background-image: linear-gradient(90deg,transparent 0%,#ccc 25%, #ccc 75%, transparent 100%);
+}
+
+.main {
+  overflow: hidden; /* For the animations ScrollReveal*/
+}
+
+.green {
+  background-color: rgb(3, 226, 3);
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+.red {
+  background-color: rgb(235, 69, 69);
+}
+
+.gray {
+    background-color: gray;
+}
 
   /*=============== HEADER & NAV ===============*/
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: var(--first-color);
-    z-index: var(--z-fixed);
-    transition: 0.4s;
-  }
-  
-  .nav {
-    height: var(--header-height);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--first-color);
+  z-index: var(--z-fixed);
+  transition: 0.4s;
+}
+
+.nav {
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__logo {
+    font-size: var(--h1-font-size);
+    font-weight: var(--font-semi-bold);
+}
+
+.nav__list {
+    display: none;
+}
+
+.nav__toggle {
+    height: 2rem;
+    width: 2rem;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+    flex-direction: column;
+    justify-content: space-around;
+}
 
-  .nav__logo {
-      font-size: var(--h1-font-size);
-      font-weight: var(--font-semi-bold);
-  }
-
-  .nav__list {
-      display: none;
-  }
-
-  .nav__toggle {
-      height: 2rem;
-      width: 2rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-  }
-
-  .nav__line {
-      height: 3px;
-      width: 100%;
-      background-color: black;
-  }
+.nav__line {
+    height: 3px;
+    width: 100%;
+    background-color: black;
+}
 
   /*=============== DADOS ===============*/
-  .dados {
-      position: fixed;
-      left: 0;
-      right: 0;
-      z-index: 1;
-      background-color: #fff;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.336);
-  }
+.dados {
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    background-color: #fff;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.158);
+}
+
+.dados.section {
+  padding-bottom: 1rem;
+}
+
+.dados__desmonte {
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  justify-items: center;
+  margin-bottom: 0.5rem;
+}
+
+.dados__poligono {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.dados__desmonte {
+  grid-area: 1 / 2 / 2 / 3; 
+}
+
+.dados__data-desmonte {
+  grid-area: 2 / 1 / 3 / 3;
+}
+
+.dados__subtitle,
+.dados__desc,
+.dados__responsavel {
+  margin-bottom: 0.5rem;
+  text-align: center;
+}
 
   /*=============== PASSOS ===============*/
-  .passos {
-      position: relative;
-        top: 15rem;
-  }
+.passos {
+  padding-top: 22rem;
+}
 
-  .passos__data {
-      row-gap: 1.5rem;
-  }
+.passos__data {
+  row-gap: 1.5rem;
+}
 
-  .passos__card {
-      padding: 1.5rem;
-      background-color: rgb(2, 255, 2);
-      line-height: 1.5rem;
-      border-radius: 1.2rem;
-  }
+.passos__card {
+  padding: 1.5rem;
+  line-height: 1.5rem;
+  border-radius: 1.2rem;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.315);
+}
 
-  .passos__card-title {
-      text-align: center;
-      margin-bottom: 1rem;
-  }
+.passos__card-title {
+  text-align: center;
+  margin-bottom: 1rem;
+  font-size: 1.3rem;
+}
 
-  .yellow {
-      background-color: yellow;
-  }
+.passos__card--justificativa {
+  padding: 1.5rem;
+  line-height: 1.5rem;
+  border-radius: 1.2rem;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.315);
+  display: none;
+  transition: 0.4s;
+}
 
-  .red {
-      background-color: rgb(235, 69, 69);
-  }
+.display-block {
+  display: block;
+}
 
-  .gray {
-      background-color: gray;
-  }
+.display-none {
+  display: none;
+}
